<resources>
    <string name="app_name">People I Know - On The List</string>

    <string name="tv_home_title">Searching for someone?</string>
    <string name="recently_added">Recently Added</string>
    <string name="view_all">View All</string>
    <string name="favorites_title">Favorites</string>
    <string name="fab_main_activity">FAB Main Activity</string>
    <string name="contact_details_title">Contact Details</string>
    <string name="contact_details_share">contact details share</string>
    <string name="contact_details_back">contact details back</string>
    <string name="contact_details_icon">Contact Image</string>
    <string name="contact_details_text">0812–3456–7890</string>
    <string name="contact_section_header">Contact</string>
    <string name="contact_header_nickname">Nickname</string>
    <string name="contact_header_full_name">This Is A Full Name</string>
    <string name="contact_avatar_image">Profile Picture Image</string>
    <string name="profile_picture_header">Profile Picture Image</string>
    <string name="contact_category">Lecturer</string>
    <string name="something_went_wrong">Oops.. something went wrong</string>
    <string name="empty_data">Empty data</string>

    <string name="start_adding_a_contact">Start adding a contact</string>
    <string name="add_contact">add contact</string>
    <string name="cd_add_contact_img">add contact card image</string>
    <string name="piko_title">People I Know - On The List</string>
    <string name="setting_button_image">setting button image</string>
    <string name="search_saved_contacts">Search saved contacts…</string>
    <string name="contacts_fragment_title">Contacts</string>
    <string name="nyd_search_page">Search Page\nNot yet developed</string>
    <string name="contacts_title_activity">Contacts</string>
    <string name="nyd_add_contact_page">Add Contact Page\nNot yet developed</string>
    <string name="my_favorites">My Favorites</string>
    <string name="cd_favorite_fav">Favorite FAV</string>
    <string name="title_favorite">Favorite</string>
    <string name="contact_history">Contact History</string>
    <string name="settings_activity_title">Settings</string>

    <string name="power_connected">Power connected!</string>
    <string name="power_disconnected">Power disconnected!</string>
    <string name="power_info">Unplug/plug your charger to see info</string>
    <string name="nav_home">Home</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_history">History</string>
    <string name="nav_profile">Profile</string>
    <string name="nyd_profile_page">Profile Page\nNot yet developed</string>
    <string name="nyd_settings_page">Settings Page\nNot yet developed</string>
    <string name="sort_by_title">Sort</string>
</resources>