<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailUserActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="22dp"
        android:layout_marginTop="18dp"
        >

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            android:layout_marginEnd="22dp"
            android:contentDescription="@string/contact_details_back" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_details_title"
            android:textSize="18sp"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/raleway_semi_bold"
            android:layout_marginEnd="22dp"
            android:gravity="center"
            android:textColor="@color/dark_blue"
            />

        <ImageView
            android:layout_marginTop="5dp"
            android:id="@+id/imgShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_share_24"
            android:layout_marginEnd="22dp"
            android:contentDescription="@string/contact_details_share" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvHeader"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:layout_below="@id/tvAppName"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="22dp"
            app:cardBackgroundColor="@color/light_blue"
            app:cardCornerRadius="20dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    >
                    <ImageView
                        android:id="@+id/detailHeader"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/sky"
                        android:contentDescription="@string/profile_picture_header" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    >
                    <ImageView
                        android:id="@+id/imgAvatar"
                        android:layout_width="124dp"
                        android:layout_height="124dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/add_contact"
                        android:contentDescription="@string/contact_avatar_image" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/cvAvatar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="4dp"
                    android:text="@string/contact_header_full_name"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:fontFamily="@font/raleway_bold"
                    android:textColor="@color/dark_blue"
                    />

                <TextView
                    android:id="@+id/tvNickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvFullName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/contact_header_nickname"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/raleway_semi_bold"
                    />

                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvNickname"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/contact_category"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:fontFamily="@font/raleway_bold"
                    android:textColor="@color/dark_blue"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/contact_section_header"
            android:layout_below="@id/cvHeader"
            android:layout_marginTop="8dp"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvContacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvContact"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="22dp"
            app:cardBackgroundColor="@color/light_blue"
            app:cardCornerRadius="10dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        >

                        <ImageView
                            android:id="@+id/imgContactIcon"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_baseline_contacts_24"
                            app:tint="@color/dark_blue"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:contentDescription="@string/contact_details_icon" />

                        <TextView
                            android:id="@+id/tvMainContact"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_details_text"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/imgContactIcon"
                            android:textSize="16sp"
                            android:layout_marginStart="12dp"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/ic_baseline_favorite_border_24_white"
            android:backgroundTint="@color/dark_blue"
            app:tint="@color/white"
            android:contentDescription="@string/cd_favorite_fav"

            android:layout_below="@id/cvContacts"
            />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>