<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="22dp"
    android:layout_marginTop="22dp"
    android:paddingBottom="56dp"
    >

    <EditText
        android:id="@+id/contactEt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawableStart="@drawable/ic_baseline_person_search_24"
        android:drawablePadding="12dp"
        android:textSize="18sp"
        android:fontFamily="@font/raleway_semi_bold"
        android:hint="@string/search_saved_contacts"
        android:inputType="none"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tvFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_below="@id/contactEt"
        android:text="@string/contacts_fragment_title"
        />

    <TextView
        android:id="@+id/tvSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/dark_blue"
        android:text="@string/sort_by_title"
        android:layout_marginEnd="22dp"
        android:gravity="end"
        app:drawableEndCompat="@drawable/ic_baseline_sort_24"
        android:layout_below="@id/contactEt"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvFavorites"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_below="@id/tvFavorites" />

    <include
        android:id="@+id/view_error"
        layout="@layout/view_error"
        android:visibility="gone" />

    <include
        android:id="@+id/view_empty"
        layout="@layout/view_empty"
        android:visibility="gone" />

</RelativeLayout>